[project]
name = "leaguehelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "firebase-admin>=7.1.0",
    "google-auth>=2.41.1",
    "gspread>=6.2.1",
    "python-dotenv>=1.1.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
]
